--- a/main.ipynb
+++ b/main.ipynb
@@ -9,13 +9,13 @@
     }
    },
    "source": [
-    "# data filtering and cleaning"
+    "# Chicago Crimes Data Filtering"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## load data"
+    "## load data between 2012 and 2017"
    ],
    "metadata": {
     "collapsed": false,
@@ -127,7 +127,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## sample data"
+    "## sample 1/4 of the data"
    ],
    "metadata": {
     "collapsed": false,
@@ -147,7 +147,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 7,
+   "execution_count": 35,
    "outputs": []
   },
   {
@@ -230,7 +230,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## clean data"
+    "## drop unnecessary columns"
    ],
    "metadata": {
     "collapsed": false,
