--- a/main.ipynb
+++ b/main.ipynb
@@ -283,6 +283,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          ID                    Date        Primary Type  \\\n1   10508695  05/03/2016 09:40:00 PM             BATTERY   \n3   10508698  05/03/2016 10:10:00 PM             BATTERY   \n8   10508709  05/03/2016 04:00:00 PM             BATTERY   \n9   10508982  05/03/2016 10:30:00 PM             BATTERY   \n27  10509077  05/03/2016 12:01:00 AM  DECEPTIVE PRACTICE   \n\n                 Description Location Description  Arrest  Domestic  Beat  \\\n1    DOMESTIC BATTERY SIMPLE            RESIDENCE   False      True   313   \n3                     SIMPLE             SIDEWALK   False     False  1532   \n8                     SIMPLE             SIDEWALK   False     False  2432   \n9    DOMESTIC BATTERY SIMPLE               STREET   False      True   735   \n27  FRAUD OR CONFIDENCE GAME            RESIDENCE   False     False   915   \n\n    District FBI Code  Year   Latitude  Longitude  \n1        3.0      08B  2016  41.782922 -87.604363  \n3       15.0      08B  2016  41.885687 -87.749516  \n8       24.0      08B  2016  41.998131 -87.665814  \n9        7.0      08B  2016  41.768097 -87.663879  \n27       9.0       11  2016  41.834586 -87.632285  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>Date</th>\n      <th>Primary Type</th>\n      <th>Description</th>\n      <th>Location Description</th>\n      <th>Arrest</th>\n      <th>Domestic</th>\n      <th>Beat</th>\n      <th>District</th>\n      <th>FBI Code</th>\n      <th>Year</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>10508695</td>\n      <td>05/03/2016 09:40:00 PM</td>\n      <td>BATTERY</td>\n      <td>DOMESTIC BATTERY SIMPLE</td>\n      <td>RESIDENCE</td>\n      <td>False</td>\n      <td>True</td>\n      <td>313</td>\n      <td>3.0</td>\n      <td>08B</td>\n      <td>2016</td>\n      <td>41.782922</td>\n      <td>-87.604363</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10508698</td>\n      <td>05/03/2016 10:10:00 PM</td>\n      <td>BATTERY</td>\n      <td>SIMPLE</td>\n      <td>SIDEWALK</td>\n      <td>False</td>\n      <td>False</td>\n      <td>1532</td>\n      <td>15.0</td>\n      <td>08B</td>\n      <td>2016</td>\n      <td>41.885687</td>\n      <td>-87.749516</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>10508709</td>\n      <td>05/03/2016 04:00:00 PM</td>\n      <td>BATTERY</td>\n      <td>SIMPLE</td>\n      <td>SIDEWALK</td>\n      <td>False</td>\n      <td>False</td>\n      <td>2432</td>\n      <td>24.0</td>\n      <td>08B</td>\n      <td>2016</td>\n      <td>41.998131</td>\n      <td>-87.665814</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10508982</td>\n      <td>05/03/2016 10:30:00 PM</td>\n      <td>BATTERY</td>\n      <td>DOMESTIC BATTERY SIMPLE</td>\n      <td>STREET</td>\n      <td>False</td>\n      <td>True</td>\n      <td>735</td>\n      <td>7.0</td>\n      <td>08B</td>\n      <td>2016</td>\n      <td>41.768097</td>\n      <td>-87.663879</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>10509077</td>\n      <td>05/03/2016 12:01:00 AM</td>\n      <td>DECEPTIVE PRACTICE</td>\n      <td>FRAUD OR CONFIDENCE GAME</td>\n      <td>RESIDENCE</td>\n      <td>False</td>\n      <td>False</td>\n      <td>915</td>\n      <td>9.0</td>\n      <td>11</td>\n      <td>2016</td>\n      <td>41.834586</td>\n      <td>-87.632285</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_sample.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
